--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,155 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,500;1,100&display=swap');
+
+/* global Style  */
+
+:root{
+  --primary: #058359 ;
+  --secondary: #AC4425;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+*{
+  margin: 0px;
+  padding: 0px;
+  font-family: "Montserrat" , sans-serif !important;
+  font-size: 16px;
 }
+.h-screen {
+  height: 100vh;
+}
+
+.w-400 {
+  width: 400px;
+}
+
+/* inputs */
+
+input,
+select,
+.ant-picker {
+  height: 40px;
+  border: 2px solid gray;
+  width: 100%;
+  padding-left: 20px;
+}
+.ant-form-item {
+  margin: 0 !important;
+}
+
+/* card */
+
+.card {
+  border: 2px solid gray;
+  box-shadow: 0 0 1px rgb(189, 189, 189);
+  border-radius: 0 !important;
+  padding: 25px;
+}
+
+/* text-sizes */
+
+.text-2xl {
+  font-size: 30px !important;
+}
+.text-xl {
+  font-size: 25px !important;
+}
+.text-lg {
+  font-size: 20px !important;
+}
+.text-md {
+  font-size: 18px !important;
+}
+
+.secondary-text {
+  color: var(--secondary) !important;
+}
+.primary-text {
+  color: var(--primary) !important;
+}
+
+.underline {
+  text-decoration: underline;
+  cursor: pointer;
+}
+
+/* buttons */
+
+.primary-btn {
+  background-color: var(--primary) !important;
+  color: white;
+  border: none;
+  padding: 10px 20px;
+  cursor: pointer;
+  height: 40px;
+}
+
+.secondary-btn {
+  background-color: var(--secondary) !important;
+  color: white;
+  border: none;
+  padding: 10px 20px;
+  cursor: pointer;
+  height: 40px;
+}
+
+.outlined{
+  border: 2px solid var(--primary) !important;
+  color: var(--primary) !important;
+  background-color: white !important;
+}
+
+.disabled-btn {
+  background-color: gray !important;
+  color: white;
+  border: none !important;
+  padding: 10px 20px;
+  border-radius: 0 !important;
+  cursor: not-allowed;
+  height: 40px;
+}
+
+button {
+  border-radius: 0 !important;
+}
+
+/* anchor */
+
+a {
+  text-decoration: none !important;
+  color: var(--primary) !important;
+}
+
+i {
+  cursor: pointer;
+  font-size: 25px;
+}
+h1,
+p {
+  margin-bottom: 0 !important;
+  padding-bottom: 0 !important;
+}
+
+/* spinner/loader */
+
+.spinner-parent {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: rgba(0, 0, 0, 0.507);
+  z-index: 10000;
+}
+.spinner-border {
+  color: white !important;
+  height: 80px !important;
+  width: 80px !important;
+}
+
+table{
+
+  border: 1px solid rgb(185, 185, 185) !important;
+}
+
